--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -12,10 +12,11 @@
         android:orientation="vertical"
         android:padding="16dp">
 
+        <!-- Toolbar -->
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:title="MGlasses"
             app:titleTextColor="@color/pulink"
             android:background="@color/white" />
@@ -30,7 +31,7 @@
             android:scaleType="centerCrop"
             android:layout_marginTop="20dp"/>
 
-
+        <!-- Welcome Text -->
         <TextView
             android:id="@+id/welcome"
             android:layout_width="wrap_content"
@@ -59,7 +60,7 @@
             android:inputType="textMultiLine"
             android:layout_margin="10dp"/>
 
-        <!-- Calendar -->
+        <!-- Calendar View -->
         <CalendarView
             android:id="@+id/calendarView"
             android:layout_width="match_parent"
@@ -69,9 +70,7 @@
             android:dateTextAppearance="?android:attr/textAppearanceMedium"
             android:layout_margin="10dp" />
 
-
-
-
+        <!-- Date Info -->
         <TextView
             android:id="@+id/tv_selected_date"
             android:layout_width="wrap_content"
@@ -82,6 +81,7 @@
             android:textStyle="italic"
             android:layout_marginTop="5dp"
             android:layout_gravity="center"/>
+
         <TextView
             android:id="@+id/tv_exercise_status"
             android:layout_width="wrap_content"
