--- a/app/src/main/res/layout/activity_eye_exercises.xml
+++ b/app/src/main/res/layout/activity_eye_exercises.xml
@@ -30,6 +30,11 @@
             android:textSize="18sp"
             android:textColor="@color/black"
             android:layout_marginBottom="20dp"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:src="@drawable/tired"
+            />
 
         <!-- YouTube Video Section 1 -->
         <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
