--- a/app/src/main/res/layout/activity_shape_animation.xml
+++ b/app/src/main/res/layout/activity_shape_animation.xml
@@ -1,10 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- Put the animation view first so it stays in the background -->
     <com.example.firstactivity.ShapesAnimationView
         android:id="@+id/shapesView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@color/lightBeige" />
+
+    <!-- Overlay text -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:textSize="24sp"
+        android:textColor="@color/black"
+        android:fontFamily="sans-serif-medium"
+        android:text="Look the point's moving"
+        android:layout_gravity="top"/>
 </FrameLayout>
