--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,13 @@
     <color name="lbu">#84C6E4</color>
     <color name="pulink">#2E273A</color>
         <color name="lightBeige">#F5F5DC</color> <!-- Light Beige -->
-        <color name="cream">#FFF8E1</color> <!-- Cream -->
+        <color name="cream">#FFF8E1</color>
+    <color name="light_green">#90EE90</color>
+    <color name="pale_green">#98FB98</color>
+    <color name="mint_green">#AAF0D1</color>
+    <color name="honeydew">#F0FFF0</color>
+    <color name="tea_green">#D0F0C0</color>
+    <color name="celadon">#ACE1AF</color>
 
-    </resources>
+
+</resources>
