--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
             android:text="MGGlasses"
             android:textAlignment="center"
             android:textSize="40sp"
-            android:textColor="@color/lbu"
+            android:textColor="@color/green_primary_dark"
             android:layout_marginTop="15dp"
             android:textStyle="bold"
             android:layout_gravity="center" />
@@ -45,7 +45,7 @@
             android:layout_height="50dp"
             android:text="Login"
             android:textColor="@color/white"
-            android:textSize="15sp"
+            android:textSize="18sp"
             android:layout_marginTop="80dp"
             android:layout_marginLeft="60dp"
             android:layout_marginRight="60dp"
@@ -59,7 +59,7 @@
             android:layout_height="50dp"
             android:text="Register"
             android:textColor="@color/white"
-            android:textSize="15sp"
+            android:textSize="18sp"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="60dp"
             android:layout_marginRight="60dp"
