--- a/app/src/main/res/layout/activity_quuiz.xml
+++ b/app/src/main/res/layout/activity_quuiz.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:padding="24dp"
     android:layout_width="match_parent"
+    android:background="@color/cream"
     android:layout_height="match_parent">
 
 
