--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:title="MGlasses"
             app:titleTextColor="@color/pulink"
-            android:background="@color/white" />
+             />
 
         <!-- Profile Picture -->
         <ImageView
@@ -27,7 +27,7 @@
             android:layout_width="325dp"
             android:layout_height="200dp"
             android:layout_gravity="center"
-            android:src="@drawable/blue"
+            android:src="@drawable/logo"
             android:scaleType="centerCrop"
             android:layout_marginTop="20dp"/>
 
@@ -40,8 +40,9 @@
             android:layout_marginTop="10dp"
             android:text="MGGlasses!"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            android:textColor="@color/lbu"
+            android:textColor="@color/green_primary_dark"
             android:textSize="35sp"
+            android:layout_marginBottom="10dp"
             android:textStyle="bold" />
 
         <!-- Notes Section -->
@@ -68,6 +69,21 @@
             android:visibility="gone"
             android:layout_gravity="center"
             android:layout_marginTop="20dp" />
+        <TextView
+            android:id="@+id/exercise_completion_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:text="You’ve completed the exercises!"
+            android:textColor="@color/tea_green"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:visibility="gone"
+            android:background="@color/black"
+            android:padding="12dp" />
+
 
         <TextView
             android:id="@+id/quiz_results_text"
@@ -79,7 +95,7 @@
             android:textColor="@color/black"
             android:textStyle="bold"
             android:gravity="center"
-            android:background="@color/tea_green"
+            android:background="@color/white"
             android:padding="16dp" />
         <Button
             android:id="@+id/start_quiz_button"
