--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -24,10 +24,10 @@
         <!-- Profile Picture -->
         <ImageView
             android:id="@+id/profile"
-            android:layout_width="325dp"
-            android:layout_height="200dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/logo"
+            android:src="@drawable/blue"
             android:scaleType="centerCrop"
             android:layout_marginTop="20dp"/>
 
