--- a/app/src/main/res/layout/activity_face_shape.xml
+++ b/app/src/main/res/layout/activity_face_shape.xml
@@ -14,6 +14,7 @@
         android:gravity="center"
         android:textSize="40sp"
         android:textStyle="bold"
+        android:layout_gravity="center"
         android:textColor="@color/green_primary_dark"
         android:layout_marginBottom="10dp" />
 
