--- a/app/src/main/res/layout/activity_gucci.xml
+++ b/app/src/main/res/layout/activity_gucci.xml
@@ -22,7 +22,7 @@
     <ImageView
         android:id="@+id/gucci_image"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="wrap_content"
         android:src="@drawable/gucc"
         android:contentDescription="Gucci Glasses"
         android:layout_gravity="center"
