--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,9 +41,11 @@
         <!-- Login Button -->
         <Button
             android:id="@+id/button_Login"
-            android:layout_width="210dp"
-            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="Login"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:textColor="@color/white"
             android:textSize="18sp"
             android:layout_marginTop="80dp"
@@ -55,14 +57,16 @@
         <!-- Register Button -->
         <Button
             android:id="@+id/button_Register"
-            android:layout_width="210dp"
-            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="Register"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_marginTop="5dp"
             android:layout_marginLeft="60dp"
             android:layout_marginRight="60dp"
+            android:textColor="@color/white"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textSize="18sp"
+            android:layout_marginTop="10dp"
             android:backgroundTint="@color/black" />
 
     </LinearLayout>
