--- a/app/src/main/res/layout/activity_oakley.xml
+++ b/app/src/main/res/layout/activity_oakley.xml
@@ -28,7 +28,7 @@
         <ImageView
             android:id="@+id/oakley_image"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="wrap_content"
             android:src="@drawable/origano"
             android:contentDescription="Oakley Glasses"
             android:layout_gravity="center"
