--- a/app/src/main/res/layout/activity_persol.xml
+++ b/app/src/main/res/layout/activity_persol.xml
@@ -28,7 +28,7 @@
         <ImageView
             android:id="@+id/persol_image"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="wrap_content"
             android:src="@drawable/persol"
             android:contentDescription="Persol Glasses"
             android:layout_gravity="center"
