--- a/app/src/main/res/layout/activity_quiz_results.xml
+++ b/app/src/main/res/layout/activity_quiz_results.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_marginBottom="10dp"
-        app:srcCompat="@drawable/vegetable"/>
+        app:srcCompat="@drawable/pilf"/>
 
     <TextView
         android:id="@+id/tv_result"
