--- a/app/src/main/res/layout/activity_ray_ban.xml
+++ b/app/src/main/res/layout/activity_ray_ban.xml
@@ -30,7 +30,7 @@
         <ImageView
             android:id="@+id/rayban_image"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="wrap_content"
             android:src="@drawable/ran"
             android:contentDescription="Ray-Ban Glasses"
             android:layout_gravity="center"
