--- a/app/src/main/res/layout/activity_vision_quiz.xml
+++ b/app/src/main/res/layout/activity_vision_quiz.xml
@@ -17,7 +17,7 @@
             android:id="@+id/image_quiz"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            app:srcCompat="@drawable/doctorwebp"
+            app:srcCompat="@drawable/doctjpg"
             android:scaleType="centerInside"/>
 
         <!-- Question Text -->
@@ -116,7 +116,7 @@
             android:id="@+id/image_cover"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:srcCompat="@drawable/cover"
+            app:srcCompat="@drawable/mard"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
           />
